# FlairStyleShop

./: .env-sample  .flake8  .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
flairstyle_shop/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
flairstyle_shop/apps/carts/: admin.py  context_processors.py  models.py  urls.py  views.py
flairstyle_shop/apps/category/: admin.py  models.py
flairstyle_shop/apps/orders/: admin.py  models.py  urls.py  views.py
flairstyle_shop/apps/store/: admin.py  forms.py  models.py  urls.py  views.py
flairstyle_shop/apps/weather_clothes/: apps.py  urls.py  utils.py  views.py
flairstyle_shop/core/: settings.py  urls.py  views.py
flairstyle_shop/core/static/css/: bootstrap.css  custom.css  ui.css
flairstyle_shop/static/admin/css/: base.css
flairstyle_shop/static/css/: bootstrap.css  ui.css
flairstyle_shop/static/js/: weather.js
flairstyle_shop/templates/: base.html  home.html
flairstyle_shop/templates/accounts/: account_verification_email.html  change_password.html  dashboard.html  edit_profile.html  forgotPassword.html  login.html  my_orders.html  order_detail.html  register.html  resetPassword.html  reset_password_email.html
flairstyle_shop/templates/includes/: dashboard_sidebar.html  footer.html  navbar.html
flairstyle_shop/templates/orders/: order_complete.html  order_received_mail.html  payments.html
flairstyle_shop/templates/store/: cart.html  checkout.html  product_detail.html  store.html
store/: admin.py  models.py
weather/: weather.py
