[tool.poetry]
name = "flairstyleshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
python-decouple = "^3.8"
django-debug-toolbar = "^4.1.0"
pillow = "^9.5.0"
django-admin-thumbnails = "^0.2.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
django-types = "^0.17.0"
django-stubs = "^4.2.0"
mypy = "^1.3.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["flairstyle_shop"]
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.black]
line-length = 120
target_version = ["py311"]
include = '\.pyi?$'
preview = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.env
  | logs
  | deprecated
)/
'''

[tool.mypy]
python_version = "3.11"
files = "flairstyle_shop/*.py"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = '''(deprecated|migrations|old)/$|settings.py'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
